--- a/PAGES/10b_macrosAlgorithms/index.html
+++ b/PAGES/10b_macrosAlgorithms/index.html
@@ -2907,7 +2907,7 @@ end</code></pre> </div></div>
  </div></div>
 <p>  </p></details></div>
 <p>The performance advantages of <code>@inbounds</code> don&#39;t only come from the elimination of bounds checking itself. Bounds checking is a form of conditional, where the iteration is executed contingent on all indices being within range. In the next sections, we&#39;ll see that conditional statements commonly limit the compiler&#39;s ability to apply further optimizations. Once we remove these checks, you give the compiler more leeway to implement additional enhancements. </p>
-<p>To illustrate such possibility, the next example shows that the application of <code>@inbounds</code> triggers the so-called SIMD instructions. They&#39;re a form of a parallelism within a core and will be explored in the upcoming sections.</p>
+<p>To illustrate such possibility, the next example shows that the application of <code>@inbounds</code> triggers the so-called SIMD instructions. They&#39;re a form of parallelism within a core and will be explored in the upcoming sections.</p>
  <div class=" hide_tab"> <details  open><summary  ><div class="closed_text"> </div>  </summary>  <p></p>
  <div class="tab_wrapper">
  <div class="tab_code_links">
