--- a/PAGES/10c_simd_intro/index.html
+++ b/PAGES/10c_simd_intro/index.html
@@ -2879,7 +2879,7 @@ color: white;
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>SIMD in Broadcasting</h2></p>
-<p>The decision to whether apply SIMD instructions is always handled by the compiler. This relies on heuristics to determine when it&#39;s beneficial to do so. One situation where Julia strongly favors the application of SIMD is with broadcasting, as can be noticed in the following example.</p>
+<p>The decision whether to apply SIMD instructions is always handled by the compiler, which relies on heuristics to determine when it&#39;s beneficial to do so. One situation where Julia strongly favors the application of SIMD is with broadcasting, as can be noticed in the following example.</p>
  <div class=" hide_tab"> <details  open><summary  ><div class="closed_text"> </div>  </summary>  <p></p>
  <div class="tab_wrapper">
  <div class="tab_code_links">
