--- a/PAGES/10g_simd_LoopVectorization/index.html
+++ b/PAGES/10g_simd_LoopVectorization/index.html
@@ -2834,8 +2834,8 @@ color: white;
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Introduction</h2></p>
-<p>So far, we&#39;ve been using the built-in macro <code>@simd</code> to apply SIMD instructions. This macro is relatively limited in certain respect. For one, it only hints the potential advantages of applying SIMD, leaving the final decision implementation to the compiler&#39;s discretion. Moreover, it only provides basic features of SIMD, prioritizing code safety over performance. </p>
-<p>Next, we introduce the macro <code>@turbo</code> from the package <code>LoopVectorization</code>, which offers several distinct advantages. First, it enforces SIMD optimizations when invoked, rather than merely suggesting them. Furthermore, it applies more aggressive optimizations compared to <code>@simd</code>. Finally, <code>@turbo</code> support both for-loops and broadcasting operations, contrasting with <code>@simd</code>&#39;s exclusive applicability to for-loops.</p>
+<p>So far, we&#39;ve been using the built-in macro <code>@simd</code> to apply SIMD instructions. This macro is relatively limited in certain respects. For one, it only hints at the potential advantages of applying SIMD, leaving the final decision implementation to the compiler&#39;s discretion. Moreover, it only provides basic features of SIMD, prioritizing code safety over performance. </p>
+<p>Next, we introduce the macro <code>@turbo</code> from the package <code>LoopVectorization</code>, which offers several distinct advantages. First, it enforces SIMD optimizations when invoked, rather than merely suggesting them. Furthermore, it applies more aggressive optimizations compared to <code>@simd</code>. Finally, <code>@turbo</code> supports both for-loops and broadcasting operations, contrasting with <code>@simd</code>&#39;s exclusive applicability to for-loops.</p>
 <p>      </div>
     </div>
   </div>
