--- a/PAGES/11c_multithread_tasks/index.html
+++ b/PAGES/11c_multithread_tasks/index.html
@@ -2995,7 +2995,7 @@ end</code></pre> </div></div>
 </code></pre> </div></div> </div> 
  </div></div>
 <p>  </p></details></div>
-<p>As we can see, the execution time under multithreaded is roughly equivalent to the maximum time for a single operation to complete in isolation. Nonetheless, this equivalence isn&#39;t exact. The reason is that <strong>multithreading have a non-negligible overhead</strong>, stemming from the creation and scheduling of tasks. This determines <strong>multithreading isn't beneficial for operations involving small objects</strong>, as the added overhead negates any potential benefits.</p>
+<p>As we can see, the execution time under multithreaded is roughly equivalent to the maximum time for a single operation to complete in isolation. Nonetheless, this equivalence isn&#39;t exact. The reason is that <strong>multithreading has a non-negligible overhead</strong>, stemming from the creation and scheduling of tasks. This determines <strong>multithreading isn't beneficial for operations involving small objects</strong>, as the added overhead negates any potential benefits.</p>
 <p>To illustrate this, let&#39;s compare the execution times of a sequential and multithreaded approach for different sizes of <code>x</code>. In the case considered, the single-threaded approach dominates for sizes smaller than 100,000. </p>
  <div class=" hide_tab"> <details  open><summary  ><div class="closed_text"> </div>  </summary>  <p></p>
  <div class="tab_wrapper">
